[gd_scene load_steps=3 format=3 uid="uid://d36vhkdra4x15"]

[ext_resource type="Script" path="res://scripts/music.gd" id="1_oev80"]
[ext_resource type="AudioStream" uid="uid://cts0stg5r8rfu" path="res://assets/music/time_for_adventure.mp3" id="1_uuorw"]

[node name="Music" type="Node"]
script = ExtResource("1_oev80")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("1_uuorw")
volume_db = 12.0
autoplay = true
max_distance = 10000.0
attenuation = 1e-05
bus = &"Music"

[connection signal="change_level" from="." to="." method="_on_change_level"]
[connection signal="intro" from="." to="." method="_on_intro"]
[connection signal="main_menu" from="." to="." method="_on_main_menu"]
